# adventofcode

./: README.md
2018/src/: CMakeLists.txt  Config.h.cmake
2018/src/day1/: main.cpp
2018/src/day2/: main.cpp
